--- a/css/style.css
+++ b/css/style.css
@@ -51,15 +51,33 @@
 
 .texto-producto {
   font-size: 25px;
-  font-family: "Pattaya", sans-serif;
   text-align: center;
+  font-family: "Pattaya", sans-serif;
 }
 
 .imagen-producto {
   height: 300px;
+  width: 100%;
   padding: 10px;
+  transition: all 1s;
 }
 
+.imagen-producto:hover {
+  transform: scale(1.05);
+  border-radius: 15%;
+}
+
+@media (max-width: 1000px) {
+  .imagen-producto {
+    border-radius: 15%;
+    height: 150px;
+    width: 100%;
+    object-fit: cover;
+  }
+  .texto-producto {
+    font-size: 17px;
+  }
+}
 .formulario {
   font-family: "Pattaya", sans-serif;
   font-size: 35px;
@@ -94,7 +112,7 @@
     text-align: center;
     font-size: 20px;
     padding: 5px;
-    background: rgb(46, 45, 41);
+    background: rgb(56, 58, 58);
     margin: auto;
     border-radius: 10px;
     border: 3px solid rgb(189, 142, 57);
@@ -102,6 +120,7 @@
 }
 .mapa {
   display: flex;
+  justify-content: center;
   margin: auto;
 }
 
