--- a/scss/_Contactanos.scss
+++ b/scss/_Contactanos.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .formulario {
     font-family: "Pattaya", sans-serif;
     font-size: 35px;
@@ -7,14 +9,14 @@
   .campoformulario {
     box-sizing: border-box;
     width: 50%;
-    color: rgb(202, 165, 116);
+    color: $texto-amarillo;
     text-align: center;
     font-size: 25px;
     padding: 20px;
-    background: rgb(46, 45, 41);
+    background: $navbar-gris;
     margin: auto;
     border-radius: 10px;
-    border: 3px solid rgb(202, 165, 116);
+    border: 3px solid $texto-amarillo;
   }
   .campoformulario #btnForm {
     width: 100px;
@@ -30,7 +32,7 @@
       text-align: center;
       font-size: 20px;
       padding: 5px;
-      background: rgb(46, 45, 41);
+      background: $fondo-gris;
       margin: auto;
       border-radius: 10px;
       border: 3px solid rgb(189, 142, 57);
