--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .navbarra {
-  background-color: rgb(46, 45, 41);
+  background-color: rgb(34, 33, 30);
   font-size: 25px;
-  margin-bottom: 100px;
+  margin-bottom: 70px;
 }
 .navbarra ul {
   display: flex;
@@ -35,7 +35,20 @@
     border-radius: 10px;
   }
 }
+.h1-index {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 50px;
+}
+
+.div-h1 {
+  text-align: center;
+  padding-bottom: 4rem;
+  padding: 10px;
+  margin: 20px;
+}
+
 .h2-index {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   text-align: center;
 }
 
@@ -44,9 +57,76 @@
   margin: auto;
 }
 
-.productosContenedor {
+.div-h2 {
+  text-align: center;
+  padding-bottom: 50px;
+}
+
+.h2-tienda {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 50px;
+}
+
+.productos-contenedor {
+  display: grid;
+  justify-content: center;
+  padding: 10px;
+  margin: 0 auto;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.prod-grid1 {
+  grid-area: 1/1/2/2;
+}
+
+.prod-grid2 {
+  grid-area: 1/2/2/3;
+}
+
+.prod-grid3 {
+  grid-area: 1/3/2/4;
+}
+
+.prod-grid4 {
+  grid-area: 2/1/3/2;
+}
+
+.prod-grid5 {
+  grid-area: 2/2/3/3;
+}
+
+.prod-grid6 {
+  grid-area: 2/3/3/4;
+}
+
+.prod-grid7 {
+  grid-area: 3/1/4/2;
+}
+
+.prod-grid8 {
+  grid-area: 3/2/4/3;
+}
+
+.prod-grid9 {
+  grid-area: 3/3/4/4;
+}
+
+.prod-grid {
   display: flex;
   justify-content: center;
+  height: 300px;
+  width: 75%;
+  margin: 0 auto;
+  padding: 10px;
+  transition: all 1s;
+}
+
+.prod-grid:hover {
+  transform: scale(1.05);
+  border-radius: 15%;
 }
 
 .texto-producto {
@@ -55,32 +135,23 @@
   font-family: "Pattaya", sans-serif;
 }
 
-.imagen-producto {
-  height: 300px;
-  width: 100%;
-  padding: 10px;
-  transition: all 1s;
-}
-
-.imagen-producto:hover {
-  transform: scale(1.05);
-  border-radius: 15%;
-}
-
 @media (max-width: 1000px) {
-  .imagen-producto {
+  .prod-grid {
     border-radius: 15%;
     height: 150px;
     width: 100%;
     object-fit: cover;
   }
+  .h2-tienda {
+    font-size: 30px;
+  }
   .texto-producto {
-    font-size: 17px;
+    font-size: 15px;
   }
 }
 .formulario {
-  font-family: "Pattaya", sans-serif;
-  font-size: 35px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 50px;
   padding: 10px;
   text-align: center;
 }
@@ -92,7 +163,7 @@
   text-align: center;
   font-size: 25px;
   padding: 20px;
-  background: rgb(46, 45, 41);
+  background: rgb(34, 33, 30);
   margin: auto;
   border-radius: 10px;
   border: 3px solid rgb(202, 165, 116);
@@ -103,19 +174,22 @@
   height: 60px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1000px) {
   .campoformulario {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     box-sizing: border-box;
-    color: rgb(138, 104, 43);
+    color: rgb(202, 165, 116);
     text-align: center;
     font-size: 20px;
     padding: 5px;
-    background: rgb(56, 58, 58);
+    background: rgb(34, 33, 30);
     margin: auto;
     border-radius: 10px;
     border: 3px solid rgb(189, 142, 57);
+  }
+  .formulario {
+    font-size: 30px;
   }
 }
 .mapa {
@@ -124,6 +198,22 @@
   margin: auto;
 }
 
+.buscanos {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 50px;
+  text-align: center;
+  padding: 10px;
+}
+
+@media (max-width: 650px) {
+  .mapa {
+    height: 350px;
+    width: 350px;
+  }
+  .buscanos {
+    font-size: 30px;
+  }
+}
 .grid-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -150,6 +240,11 @@
   margin: auto;
 }
 
+.div1 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 50px;
+}
+
 .div2 {
   margin: auto;
 }
@@ -167,16 +262,46 @@
   padding: 30px;
 }
 
+.imgfabrica {
+  padding: 10px;
+  max-width: 80%;
+  max-height: 100%;
+  border: none;
+  display: block;
+  margin: 0 auto;
+}
+
 @media (max-width: 1000px) {
   .grid-container {
     box-shadow: none;
     display: contents;
     grid-area: "1 / 1 / 2 / 3" "2 / 1 / 3 / 2" "2 / 2 / 3 / 3";
   }
+  .div1 {
+    font-size: 30px;
+  }
+  .div2 {
+    display: flex;
+    justify-content: center;
+    width: 380px;
+    height: 240px;
+  }
 }
-.iconosRedes {
-  height: 50px;
-  width: 50px;
+.footer {
+  background-color: rgb(34, 33, 30);
+  padding: 0px;
+  color: rgb(202, 165, 116);
+  margin-top: 100px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.margen {
+  margin: 0;
+}
+
+.redes {
+  align-items: flex-end;
 }
 
 /*# sourceMappingURL=style.css.map */
