--- a/scss/_Contactanos.scss
+++ b/scss/_Contactanos.scss
@@ -1,8 +1,8 @@
 @import "variables";
 
 .formulario {
-    font-family: "Pattaya", sans-serif;
-    font-size: 35px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 50px;
     padding: 10px;
     text-align: center;
   }
@@ -23,18 +23,21 @@
     height: 60px;
   }
 
-  @media (max-width:500px) {
+  @media (max-width:1000px) {
     .campoformulario {
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      height: 80%;
       box-sizing: border-box;
-      color: rgb(138, 104, 43);
+      color: $texto-amarillo;
       text-align: center;
       font-size: 20px;
       padding: 5px;
-      background: $fondo-gris;
+      background: $navbar-gris;
       margin: auto;
       border-radius: 10px;
       border: 3px solid rgb(189, 142, 57);
     } 
+    .formulario {
+      font-size: 30px;
+    }
   } 
