--- a/scss/_SobreNosotros.scss
+++ b/scss/_SobreNosotros.scss
@@ -1,38 +1,61 @@
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr 2fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    }
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 2fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
     
-    .div1 { grid-area: 1 / 1 / 2 / 3; }
-    .div2 { grid-area: 2 / 1 / 3 / 2; }
-    .div3 { grid-area: 2 / 2 / 3 / 3; }
-    .div1 {
-      font-size: 50px;
-      text-align: center;
-      margin: auto;
-    }
-    .div2 {
-      margin: auto;
-    }
-    .div3 {
-      text-align: center;
-      margin-top: 15px;
-    }
-    .div3info {
-      font-size: 20px;
-      grid-area: 2 / 2 / 3 / 3;
-      margin-top: 60px; 
-      text-align: center;
-      padding: 30px;
-    }
+.div1 { grid-area: 1 / 1 / 2 / 3; }
+.div2 { grid-area: 2 / 1 / 3 / 2; }
+.div3 { grid-area: 2 / 2 / 3 / 3; }
+.div1 {
+  font-size: 50px;
+  text-align: center;
+  margin: auto;
+}    
+.div1 {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 50px;
+}
+.div2 {
+  margin: auto;
+}
+.div3 {
+  text-align: center;
+  margin-top: 15px;
+}
+.div3info {
+  font-size: 20px;
+  grid-area: 2 / 2 / 3 / 3;
+  margin-top: 60px; 
+  text-align: center;
+  padding: 30px;
+}    
 
-    @media (max-width: 1000px) {
-      .grid-container {
-        box-shadow: none;
-        display: contents;
-        grid-area: "1 / 1 / 2 / 3" "2 / 1 / 3 / 2" "2 / 2 / 3 / 3";
-      }
-    }
+.imgfabrica {
+  padding: 10px;
+  max-width: 80%;
+  max-height: 100%;
+  border: none;
+  display: block;
+  margin: 0 auto;
+}
+
+@media (max-width: 1000px) {
+  .grid-container {
+    box-shadow: none;
+    display: contents;
+    grid-area: "1 / 1 / 2 / 3" "2 / 1 / 3 / 2" "2 / 2 / 3 / 3";
+  }
+  .div1 {
+    font-size: 30px;
+  }
+  .div2 {
+    display: flex;
+    justify-content: center;
+    width: 380px;
+    height: 240px;
+  }
+}    
+  
