--- a/scss/_TiendaOnline.scss
+++ b/scss/_TiendaOnline.scss
@@ -1,36 +1,70 @@
 @import "mixins";
 
-.productosContenedor {
+.div-h2 {
+  text-align: center;
+  padding-bottom: 50px;
+}
+
+.h2-tienda {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 50px;
+}
+
+ .productos-contenedor {
+    display: grid;
+    justify-content: center;
+    padding: 10px;
+    margin: 0 auto;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  
+  .prod-grid1 { grid-area: 1 / 1 / 2 / 2; }
+  .prod-grid2 { grid-area: 1 / 2 / 2 / 3; }
+  .prod-grid3 { grid-area: 1 / 3 / 2 / 4; }
+  .prod-grid4 { grid-area: 2 / 1 / 3 / 2; }
+  .prod-grid5 { grid-area: 2 / 2 / 3 / 3; }
+  .prod-grid6 { grid-area: 2 / 3 / 3 / 4; }
+  .prod-grid7 { grid-area: 3 / 1 / 4 / 2; }
+  .prod-grid8 { grid-area: 3 / 2 / 4 / 3; }
+  .prod-grid9 { grid-area: 3 / 3 / 4 / 4; }
+
+
+  .prod-grid {
     display: flex;
     justify-content: center;
+    height: 300px;
+    width: 75%;
+    margin: 0 auto;
+    padding: 10px;
+    transition: all 1s;
+  }
+
+  .prod-grid:hover {
+    transform: scale(1.05);
+    border-radius: 15%;
   }
 
   .texto-producto {
     @include text-style (25px, center);
     font-family: "Pattaya", sans-serif;
- 
-  }
-  .imagen-producto {
-    height: 300px;
-    width: 100%;
-    padding: 10px;
-    transition: all 1s;
   }
 
-  .imagen-producto:hover {
-    transform: scale(1.05);
-    border-radius: 15%;
-  }
+
 
   @media (max-width: 1000px){
-    .imagen-producto {
+    .prod-grid {
       border-radius: 15%;
       height: 150px;
       width: 100%;
       object-fit: cover;
     }
+    .h2-tienda {
+      font-size: 30px;
+    }
     .texto-producto {
-      font-size: 17px;
+      font-size: 15px;
     }
   }
-    
