--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,21 @@
-.iconosRedes {
-    height: 50px;
-    width: 50px;
+@import "variables";
+
+.footer {
+    background-color: $navbar-gris;        
+    padding: 0px;
+    color: $texto-amarillo;
+    margin-top: 100px;
+    font-size: 20px;
+    text-align: center;
+
+}
+
+.margen {
+    margin: 0;
+
+}
+
+.redes {
+    align-items: flex-end;
     }
+
