--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,7 +1,22 @@
+.h1-index {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 50px;
+}
+
+.div-h1 {
+  text-align: center;
+  padding-bottom: 4rem;
+  padding: 10px;
+  margin: 20px;
+}
+
 .h2-index {
-    text-align: center;
-  }
-  .carousel {
-    padding-top: 20px;
-    margin: auto;
-  }
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+}
+
+.carousel {
+  padding-top: 20px;
+  margin: auto;
+}
+
